# bevy_rig

./: Cargo.toml  README.md
docs/: architecture.md  bevy_rig_blueprint.md  rig_bevy_feature_map.md
examples/: cancel_run.rs  context_prompt.rs  discovered_provider_run.rs  headless_echo.rs  provider_models.rs  rig_provider_run.rs  rig_provider_workflow.rs  router_workflow.rs  runtime_diagnostics.rs  streaming_run.rs  tool_dispatch.rs  workflow_execution.rs  workflow_graph.rs
node_graph_editor/: Cargo.toml  README.md
node_graph_editor/.state/: providers.json
node_graph_editor/src/: catalog.rs  compile.rs  document.rs  graph.rs  main.rs  providers.rs  runtime.rs  session.rs  ui.rs
roguelike/: Cargo.toml
roguelike/src/: components.rs  events.rs  lib.rs  main.rs  map.rs  plugins.rs  resources.rs  runtime.rs
roguelike/src/systems/: input.rs  mod.rs  render.rs  setup.rs  simulation.rs
roguelike/tests/: systems.rs
roguelike_original/: notes.txt  stuff
src/: agent.rs  app.rs  catalog.rs  context.rs  diagnostics.rs  domain.rs  lib.rs  main.rs  model.rs  prelude.rs  provider.rs  rig_runtime.rs  run.rs  runtime.rs  session.rs  tool.rs  ui.rs  workflow.rs
