[package]
name = "bevy_rig"
version = "0.1.0"
edition = "2024"

[features]
default = []
media = ["rig/audio", "rig/image", "rig/pdf"]
mcp = ["rig/rmcp"]
experimental = ["rig/experimental"]

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
bevy = "0.18.1"
bevy_egui = "0.39.1"
crossbeam-channel = "0.5.15"
rig = { package = "rig-core", version = "0.33.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
