[package]
name = "bevy_rig"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Bevy ECS primitives and systems for modeling providers, agents, tools, sessions, runs, and workflows on top of Rig."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/bevy_rig"
keywords = ["bevy", "ecs", "llm", "agent", "rig"]
categories = ["game-development", "asynchronous", "api-bindings"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "src/**",
    "examples/**",
    "docs/**",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
media = ["rig/audio", "rig/image", "rig/pdf"]
mcp = ["rig/rmcp"]
experimental = ["rig/experimental"]

[dependencies]
anyhow = "1.0.100"
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
bevy_tasks = "0.18.1"
rig = { package = "rig-core", version = "0.33.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
