[package]
name = "bevy_node_graph"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false

[dependencies]
bevy = "0.18.1"
anyhow = "1.0.100"
arboard = { version = "3.6.1", default-features = false }
crossbeam-channel = "0.5.15"
directories-next = "2.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rig = { package = "rig-core", version = "0.33.0" }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
